--- a/src/main/webapp/WEB-INF/top.jspf
+++ b/src/main/webapp/WEB-INF/top.jspf
@@ -1,18 +1,19 @@
 <%@ page contentType="text/html;charset=UTF-8" language="java" %>
 <%@ taglib prefix="c" uri="jakarta.tags.core" %>
 <%@ taglib prefix="fmt" uri="jakarta.tags.fmt" %>
+<%@ taglib prefix="fn" uri="jakarta.tags.functions" %>
+<jsp:useBean id="date" class="java.util.Date" />
 <fmt:setLocale value="en-US" />
 <c:choose>
     <c:when test="${pageContext.request.serverName eq 'localhost'}">
-        <%-- Do someting on local host only --%>
+        <%-- Do something on localhost only --%>
         <c:set var="appURL" value="${initParam['appURLLocal']}"></c:set>
     </c:when>
     <c:otherwise>
-        <%-- Do something on azure only --%>
+        <%-- Do something on Azure only --%>
         <c:set var="appURL" value="${initParam['appURLCloud']}"></c:set>
     </c:otherwise>
 </c:choose>
-
 <!doctype html>
 <html lang="en">
 <head>
@@ -21,12 +22,35 @@
     <title>${pageTitle}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
+    <c:if test="${pageTitle eq 'Home'}"><link rel="stylesheet" href="${appURL}/styles/home.css"></c:if>
+    <%--  Additional CSS  --%>
+
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
     <script defer src="https://code.jquery.com/jquery-3.7.1.min.js"
             integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
             crossorigin="anonymous"></script>
-    <%-- Additional JavaScript files here --%>
+
+    <%--  Additional JavaScript  --%>
 </head>
 <body>
+<%@include file="/WEB-INF/top-nav.jspf"%>
+<div class="container">
+    <c:choose>
+        <c:when test="${not empty sessionScope.flashMessageSuccess}">
+            <div class="alert alert-success my-2" role="alert">${sessionScope.flashMessageSuccess}</div>
+            <c:remove var="flashMessageSuccess" scope="session"></c:remove>
+        </c:when>
+        <c:when test="${not empty sessionScope.flashMessageDanger}">
+            <div class="alert alert-danger my-2" role="alert">${sessionScope.flashMessageDanger}</div>
+            <c:remove var="flashMessageDanger" scope="session"></c:remove>
+        </c:when>
+        <c:when test="${not empty sessionScope.flashMessageWarning}">
+            <div class="alert alert-warning my-2" role="alert">${sessionScope.flashMessageWarning}</div>
+            <c:remove var="flashMessageWarning" scope="session"></c:remove>
+        </c:when>
+    </c:choose>
+</div>
