--- a/src/main/webapp/styles/404.css
+++ b/src/main/webapp/styles/404.css
@@ -3,16 +3,16 @@ body {
     padding: 0;
 }
 
-/* Image below the navbar */
+
 #error-page img {
     width: 100%;
-    height: 70vh; /* Adjust this to control the height of the image */
-    object-fit: cover; /* Ensures the image covers the area without distortion */
+    height: 70vh;
+    object-fit: cover;
     display: block;
     margin-top: -3em;
 }
 
-/* Heading and other text */
+
 #error-page h1, #error-page h2, #error-page p {
     color: white;
     text-shadow: 2px 2px 5px rgba(0,0,0,0.7);
@@ -45,7 +45,6 @@ body {
     background-color: #103220;
 }
 
-/* Footer styling */
 footer {
     margin-top: 10em;
 }
