--- a/src/main/webapp/styles/my-styles.css
+++ b/src/main/webapp/styles/my-styles.css
@@ -10,6 +10,7 @@
     --link-dark: #004A32;
     --accent-1: #416955;
     --accent-2: #a5b6ae;
+    --accent-3: #edf2ed;
 }
 
 body {
@@ -38,16 +39,23 @@ a {
     font-weight: 600;
     font-size: 1.25rem;
     margin-top: 1em;
-    display: inline-block;
-    text-align: center;
-    line-height: 64px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     text-decoration: none;
     position: relative;
     z-index: 2;
+    border: none !important;
+    text-align: center;
 }
+
 
 .button-dark:hover {
     background-color: var(--accent-1);
+}
+
+.button-dark:active {
+    background-color: var(--button-dark) !important;
 }
 
 .my-footer {
@@ -76,4 +84,10 @@ a {
 .footer-img {
     max-width: 250px;
     height: auto;
+}
+
+.alert-danger {
+    color: var(--accent-1);
+    background-color: var(--accent-3);
+    border: 2 px solid var(--background-dark) !important;
 }
