--- a/src/main/webapp/styles/signup.css
+++ b/src/main/webapp/styles/signup.css
@@ -1,27 +1,14 @@
-.form-signin {
-    max-width: 330px;
-    padding: 1rem;
+h1 {
+    font-size: 3rem !important;
+    font-weight: 500;
+    line-height: 4rem;
+    color: var(--text-dark);
+    font-family: "Raleway", sans-serif;
 }
 
-.form-signin .form-floating:focus-within {
-    z-index: 2;
-}
-
-.form-signin input[type="email"] {
-    margin-bottom: -1px;
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0;
-}
-
-.form-signin input[type="password"] {
-    margin-bottom: 10px;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-}
-
-.button-login {
+.button-signup {
     border: none;
-    align-content: center;
+    align-content: center !important;
     width: 100% !important;
 }
 
@@ -38,7 +25,6 @@ a:hover {
     box-shadow: 0 0 5px var(--accent-2);
     border: none;
 }
-
 
 .form-check-input:checked {
     background-color: var(--accent-1);
