--- a/src/main/webapp/WEB-INF/bottom-nav.jspf
+++ b/src/main/webapp/WEB-INF/bottom-nav.jspf
@@ -19,8 +19,8 @@
                     <div class="me-5">
                         <h5>Users</h5>
                         <ul class="nav flex-column">
-                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Sign Up</a></li>
-                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Log in</a></li>
+                            <li class="nav-item mb-2"><a href="${appURL}/signup" class="nav-link p-0 text-body-secondary">Sign Up</a></li>
+                            <li class="nav-item mb-2"><a href="${appURL}/login" class="nav-link p-0 text-body-secondary">Log in</a></li>
                         </ul>
                     </div>
 
