Time format and other fixes

--- a/src/main/webapp/WEB-INF/top-nav.jspf
+++ b/src/main/webapp/WEB-INF/top-nav.jspf
@@ -63,7 +63,7 @@
                             <a class="dropdown-item" href="${appURL}/trails">Trails</a>
                         </li>
                         <li class="admin-menu">
-                            <a class="dropdown-item" href="${appURL}/users">Reviews</a>
+                            <a class="dropdown-item" href="${appURL}/reviews">Reviews</a>
                         </li>
                         <li class="admin-menu">
                             <a class="dropdown-item" href="${appURL}/maintenance">Maintenance</a>
