--- a/src/main/webapp/WEB-INF/edit-profile-header.jspf
+++ b/src/main/webapp/WEB-INF/edit-profile-header.jspf
@@ -7,11 +7,11 @@
                     <!-- Profile info -->
                     <div class="col d-flex justify-content-center align-items-center">
                         <div>
-                            <h4 style="text-align: center" >Good morning<c:if test="${not empty activeUser.firstName}">, ${fn:escapeXml(activeUser.firstName)}</c:if>!</h4>
-                            <ul class="list-inline mb-0 text-center">
-                                <li class="list-item">Member since January 1, 20XX</li>
-                                <li class="list-item"> March 1 20XX, 8:00 AM</li>
-
+                            <jsp:useBean id="now" class="java.util.Date" scope="page" />
+                            <h4>Good morning<c:if test="${not empty activeUser.firstName}">, ${fn:escapeXml(activeUser.firstName)}</c:if>!</h4>
+                            <ul class="list-inline mb-0">
+                                <li class="list-item"><i class="bi bi-calendar-event-fill fs-6"></i> Today is <fmt:formatDate value="${now}" pattern="MMMM d, YYYY h:mm a z" /></li>
+                                <li class="list-item"><i class="bi bi-star-fill fs-6"></i> Member since <fmt:formatDate value="${activeUser.createdAtDate}" dateStyle="long" /></li>
                             </ul>
                         </div>
                         <!-- Responsive toggler START -->
