--- a/src/main/webapp/styles/my-styles.css
+++ b/src/main/webapp/styles/my-styles.css
@@ -147,19 +147,31 @@ a {
 .table-button {
     background-color: var(--button-dark);
     border: 1px solid white;
-    width: 12rem;
+    min-width: 12rem !important;
+    max-width: 20rem !important;
     height: 3rem;
     border-radius: 24px;
     font-size: 1.2rem;
     align-content: center;
     color: white;
+    text-align: center;
 }
 
 .table-button:hover {
     background-color: transparent;
     border: 1px solid white;
+    color:white !important;
 }
 
+.table-button:active {
+    background-color: transparent !important;
+    border: 1px solid white !important;
+}
+
+.table-button:focus {
+    background-color: transparent !important;
+    border: 1px solid white !important;
+}
 /*.btn-check:checked+.btn, .btn.active, .btn.show, .btn:first-child:active, :not(.btn-check)+.btn:active{*/
 /*    background-color: transparent !important;*/
 /*    border: 1px solid white;*/
@@ -177,10 +189,10 @@ a {
     font-size: 1rem;
 }
 
-.edit-color:hover {
-    background-color: var(--accent-4);
-    border: 1px solid var(--accent-4);
-    color: var(--text-dark);
+.edit-color:hover, .edit-color:focus, .edit-color:active {
+    background-color: var(--accent-4) !important;
+    border: 1px solid var(--accent-4) !important;
+    color: var(--text-dark) !important;
 }
 
 .delete-color {
@@ -190,10 +202,11 @@ a {
     font-size: 1rem;
 }
 
-.delete-color:hover {
-    background-color: var(--accent-1);
-    border: 1px solid var(--text-dark);
+.delete-color:hover, .delete-color:focus, .delete-color:active {
+    background-color: var(--accent-1) !important;
+    border: 1px solid var(--accent-1) !important;
 }
+
 
 select {
     background-color: white !important;
